--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1"
   },
-  "homepage" : "http://JvSe.github.io",
+  "homepage" : "https://jvse.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
